짜잘한 수정

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -18,12 +18,12 @@
     <div id="admin-wrapper">
         <header>
             <div>
-                <a href="/index" class="logo"><img src="/images/admin_logo.png" alt="admin_logo"/></a>
+                <a th:href="@{/admin/layout/index/layoutindex}" class="logo"><img src="/images/admin_logo.png" alt="admin_logo"/></a>
                 <p>
-                    <span>홍길동님 반갑습니다.</span>
-                    <a href="#">HOME |</a>
-                    <a href="#">로그아웃 |</a>
-                    <a href="#">고객센터</a>
+                    <span>[[${#authentication.principal.user.uid}]]님 환영합니다</span>
+                    <a th:href="@{/}">HOME |</a>
+                    <a th:href="@{/member/logout}">로그아웃 |</a>
+                    <a th:href="@{/cs}">고객센터</a>
                 </p>
             </div>
         </header>
@@ -42,7 +42,6 @@
                         <a href="#"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
                         <ol>
                             <li><a href="#">판매자현황</a></li>
-                            <li><a href="#">재고관리</a></li>
                         </ol>
                     </li>
                     <li>
@@ -50,8 +49,6 @@
                         <ol>
                             <li><a href="#">회원현황</a></li>
                             <li><a href="#">포인트관리</a></li>
-                            <li><a href="#">비회원관리</a></li>
-                            <li><a href="#">접속자집계</a></li>
                         </ol>
                     </li>
                     <li>
