--- a/src/main/resources/templates/admin/layout/config/banner.html
+++ b/src/main/resources/templates/admin/layout/config/banner.html
@@ -59,8 +59,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                             <tr>
@@ -82,8 +82,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                         </table>
@@ -130,8 +130,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                             <tr>
@@ -152,8 +152,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                             <tr>
@@ -174,8 +174,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                             <tr>
@@ -196,8 +196,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                         </table>
@@ -243,8 +243,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                         </table>
@@ -290,8 +290,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                         </table>
@@ -337,8 +337,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                             <tr>
@@ -359,8 +359,8 @@
                                 <td>14:00</td>
                                 <td>12</td>
                                 <td>
+                                    <a href="#">[활성]</a><br>
                                     <a href="#">[비활성]</a>
-                                    <a href="#">[활성]</a>
                                 </td>
                             </tr>
                         </table>
