--- a/src/main/resources/static/company/style.css
+++ b/src/main/resources/static/company/style.css
@@ -106,7 +106,7 @@ p.desc {
 
 .slide4 .tit1 {left: 160px; top: 120px;}
 .slide4 .tit2 {left: 160px; top: 180px;}
-.slide4 .desc {left: 160px; bottom: 120px;}
+.slide4 .desc {left: 160px; bottom: 40px;}
 
 
 /* Swiper ê´€ë ¨ */
@@ -135,9 +135,9 @@ p.desc {
     min-width: 1600px;
     height: auto;            
 }
-.slide2 {background-image: url('../img/bg_system_sec.jpg');}
-.slide3 {background-image: url('../img/bg_product_sec.jpg');}
-.slide4 {background-image: url('../img/bg_service_sec.jpg');}
+.slide2 {background-image: url('../images/img/bg_system_sec.jpg');}
+.slide3 {background-image: url('../images/img/bg_product_sec.jpg');}
+.slide4 {background-image: url('../images/img/bg_service_sec.jpg');}
 
 .scroll-icon {
     position: absolute;
@@ -246,7 +246,7 @@ main > .content > p {
 
 /* íšŒì‚¬ì†Œê°œ */
 #introduce > .cover {
-    background-image: url('../img/bg_company_introduce.jpg');
+    background-image: url('../images/img/bg_company_introduce.jpg');
 }
 
 #introduce img {
@@ -257,19 +257,20 @@ main > .content > p {
 
 /* ì „ìžê³µì‹œ */
 #notice > .cover {
-    background-image: url('../img/bg_company_notice.jpg');
+    background-image: url('../images/img/bg_company_notice.jpg');
 }
 
-#notice img {
-    display: block;
+#notice #noticeTable {
+	text-align: center;
     width: 80%;
     margin: 28px auto;
 }
 
+
 /* í™ë³´ì±„ë„ */
 #promote {}
 #promote > .cover {
-    background-image: url('../img/bg_company_promote.jpg');
+    background-image: url('../images/img/bg_company_promote.jpg');
 }
 #promote > .content {}
 #promote > .content > article {
@@ -295,7 +296,7 @@ main > .content > p {
 
 /* íˆ¬ëª…ê²½ì˜ */
 #manage > .cover {
-    background-image: url('../img/bg_company_manage.jpg');
+    background-image: url('../images/img/bg_company_manage.jpg');
 }
 
 #manage > .content > ul {
