--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -31,7 +31,7 @@
 							<a th:href="@{/member/logout}">로그아웃</a>
 						</th:block>
 						<th:block th:if="${type eq '2' || type eq '9'}">
-							<a href="#">관리페이지</a>
+							<a th:href="@{/admin/layout/index/layoutindex}">관리페이지</a>
 						</th:block>
                         <a th:href="@{/my/}">마이페이지</a>
                         <a th:href="@{/product/productCart}">&nbsp;장바구니</a>
