--- a/src/main/resources/templates/my/_header.html
+++ b/src/main/resources/templates/my/_header.html
@@ -41,12 +41,15 @@
         <div id="my">
             <nav>
                 <div>
-                    <a th:href="@{/my/}"><img src="../images/my_logo.jpg" alt="나의쇼핑정보"></a>
+                    <a th:href="@{/my/}"><img th:src="@{/images/my_logo.jpg}" alt="나의쇼핑정보"></a>
                     <ol>
                         <li><a th:href="@{/my/order}">주문·배송<span class="delivery">1</span></a></li>
                         <li><a th:href="@{/my/coupon}">할인쿠폰<span class="coupon">1</span></a></li>
                         <li><a th:href="@{/my/point}">포인트<span class="point">1,000</span></a></li>
-                        <li><a th:href="@{/my/qna}">문의내역<span class="qna">1</span></a></li>
+                        <li><a th:href="@{/my/qna}">문의내역
+							<span class="qna">[[${total}]]</span>
+							</a>
+						</li>
                     </ol>
                 </div>
             </nav>
