--- a/src/main/resources/templates/company/notice.html
+++ b/src/main/resources/templates/company/notice.html
@@ -1,29 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
-	
+<th:block th:insert="/company/_header.html"/>	
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LotteON Inc. 상상하는 모든것</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../company/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../js/company//header.js"></script>
-</head>
-<body>
-    <div id="wrapper">
-        <header>
-            <div>
-                <a href="./index.html"><img src="./img/header_logo.png" width="180" alt="로고"></a>
-                <ul>
-            		<li><a th:href="@{/company/}" style="color: rgb(255, 255, 255);">회사소개</a></li>
-                    <li><a th:href="@{/company/notice}" style="color: rgb(255, 255, 255);">전자공시</a></li>
-                    <li><a th:href="@{/company/promote}" style="color: rgb(255, 255, 255);">홍보채널</a></li>
-                    <li><a th:href="@{/company/manage}" style="color: rgb(255, 255, 255);">투명경영</a></li>
-                </ul>
-            </div>
-        </header>
         <main id="notice">
             <div class="cover">
                 <div>
@@ -35,19 +12,18 @@
                 </div>
             </div>
             <section class="content">
-                <img src="./img/notice_sample.png" alt="">
-
+               <table id="noticeTable" border="0">
+                    <tr class="noticeTable">
+                        <th>제목</th>
+                        <th>등록일</th>
+                    </tr>
+                    
+                    <tr>
+   						<td class="title">기준일 및 주주명부 폐쇄기간 설정 공고</td>                    
+                        <td class="date">2022-12-16</td>
+	                 </tr>
+                </table>
             </section>
         </main>
-        <footer>
-            <div>
-                <img src="../img/footer_logo.png" alt="로고">                
-                <p>
-                    대표자 : 홍길동 사업자등록번호 : 123-45-67890 부산광역시 강남구 테헤란로 123 통신판매업 신고번호 : 제2021-부산강남-12345호<br>
-                    개인정보보호책임자 : 김춘추 FAX : 02-1234-5678 help@LotteON.com
-                </p>
-            </div>            
-        </footer>
-    </div>    
-
-</body></html>
+<th:block th:insert="/company/_footer.html"/>
+</html>
