--- a/src/main/resources/templates/admin/layout/cs/qnalist.html
+++ b/src/main/resources/templates/admin/layout/cs/qnalist.html
@@ -60,25 +60,29 @@
                     <td th:if="${qnalist.comment == 0}" style="text-align:center; width:10%; color: red;">[처리중]</td>
 					<td th:if="${qnalist.comment != 0}" style="text-align:center; width:10%; color: green;">[처리완료]</td>
 					<td style="text-align:center; width:10%">
-                        <a th:if="${comment == 0}" th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" class="qnaModify">[답변]</a>
+                        <a th:if="${qnalist.comment == 0}" th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" class="qnaModify">[답변]</a>
                         <a href="#" class="qnaDelete">[삭제]</a>
                     </td>
                 </tr>
+                
             </table>
-
-            <input type="button" value="선택 삭제" class="csDelete"/>
-
-            <div class="paging">
+			<input type="button" value="선택 삭제" class="csDelete"/>
+			
+			<div class="paging">
 		        <span th:if="${pageStartNum > 1}">
-		            <a th:href="@{/admin/layout/cs/qnalist(pg=${pageStartNum - 1})}" class="prev">이전</a>
+		            <a th:href="@{/admin/layout/cs/qnalist(pg=${pageStartNum - 1})}" >이전</a>
 		        </span>
-		        <span th:each="page : ${#numbers.sequence(1, totalPages)}" th:class="num">
+		        <span th:each="page : ${#numbers.sequence(1, totalPages)}" class="num">
 		            <a th:href="@{/admin/layout/cs/qnalist(pg=${page})}" th:text="${page}"></a>
 		        </span>
-		        <span th:if="${pageEndNum < totalPages}">
-		            <a th:href="@{/admin/layout/cs/qnalist(pg=${pageEndNum + 1})}">다음</a>
+		        <span th:if="${pageEndNum < totalPages}" class="next">
+		            <a th:href="@{/admin/layout/cs/qnalist(pg=${pageEndNum + 1})}" >다음</a>
 		        </span>
 			</div>
+			
+            
+
+
         </section>
     </section>
 </html>
