마이페이지 비밀번호 확인 작업

--- a/src/main/resources/static/css/my/style.css
+++ b/src/main/resources/static/css/my/style.css
@@ -1196,53 +1196,53 @@ footer p > strong {
     font-size: 0;
 }
 
-/* my - info(나의설정) */
-#my > .info > section > article > table {
+/* my - info(나의설정) form추가해서 선택자 삽입해줌 */
+#my > .info > section > article > form > table {
     width: 100%;
     height: auto;
     border-top: 2px solid #444;
     margin-top: 6px;
     border-collapse: collapse;            
 }
-#my > .info > section > article > table * {
+#my > .info > section > article > form > table * {
     font-family: '돋움';
 }
 
-#my > .info > section > article > table th {
+#my > .info > section > article > form > table th {
     padding: 6px;
     background-color: #a5a7a5;
     box-sizing: border-box;
     color: #fff;
 }
-#my > .info > section > article > table td {
+#my > .info > section > article > form > table td {
     padding: 10px;            
     border-left: 1px solid #f1f1f1;
     border-bottom: 1px solid #f1f1f1;
     box-sizing: border-box;
     overflow: hidden;
 }
-#my > .info > section > article > table td:first-child {
+#my > .info > section > article > form > table td:first-child {
     width: 120px;
     border-left: none;
     background-color: #f7f7f7;
 }
-#my > .info > section > article > table input {
+#my > .info > section > article > form > table input {
     padding: 2px;
     box-sizing: border-box;
     border: 1px solid #999;
 }
 
-#my > .info > section > article > table .address > input {
+#my > .info > section > article > form > table .address > input {
     display: block;
     width: 300px;
     margin-top: 2px;
 }
 
-#my > .info > section > article > table .hp > input {
+#my > .info > section > article > form > table .hp > input {
     width: 60px;
 }
 
-#my > .info > section > article > table select {
+#my > .info > section > article > form > table select {
     padding: 2px;
 }
 
@@ -1261,6 +1261,18 @@ footer p > strong {
     border: 1px solid #c84f3c;
     color: #fff;
     cursor: pointer;
+}
+
+/* #infoPassCheck.html에서 버튼에 적용하기위해 class추가해줌 */
+#my .btnInfo { 
+    display: block;
+    width: 160px;
+    height: 30px;
+    margin: 10px auto;
+    background-image: url('../../images/btn_my_change.png');
+    color: #fff;
+    font-family: '돋움';
+    border: none;
 }
 
 #my #btnInfoChange {
