--- a/src/main/resources/templates/my/point.html
+++ b/src/main/resources/templates/my/point.html
@@ -21,21 +21,21 @@
                 <div class="byDate">
                     <span class="tit">기간별조회</span>                            
                     <ul class="date_3ea">
-                        <li><a href="#"><em>1</em>주일</a></li>
-                        <li><a href="#"><em>15</em>일</a></li>
-                        <li><a href="#" class="on"><em>1</em>개월</a></li>
+                        <li><a href="#" class="date"><em>1</em>주일</a></li>
+                        <li><a href="#" class="date"><em>15</em>일</a></li>
+                        <li><a href="#" class="date"><em>1</em>개월</a></li>
                     </ul>
                     <ul class="date_5ea">
-                        <li><a href="#"><em>11</em>월</a></li>
-                        <li><a href="#"><em>10</em>월</a></li>
-                        <li><a href="#"><em>9</em>월</a></li>
-                        <li><a href="#"><em>8</em>월</a></li>
-                        <li><a href="#"><em>7</em>월</a></li>
+                        <li><a href="#" class="date"><em>11</em>월</a></li>
+                        <li><a href="#" class="date"><em>10</em>월</a></li>
+                        <li><a href="#" class="date"><em>9</em>월</a></li>
+                        <li><a href="#" class="date"><em>8</em>월</a></li>
+                        <li><a href="#" class="date"><em>7</em>월</a></li>
                     </ul>
                     <p>
                         <input type="date" name="begin"><span>~</span><input type="date" name="end">
                     </p>
-                    <button class="btnConfirm">조회하기</button>
+                    <button class="btnConfirm btnPointConfirm">조회하기</button>
                 </div>
 
                 <table border="0">
