--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -47,7 +47,7 @@
                     <li>
                         <a href="#"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
                         <ol>
-                            <li><a href="#">회원현황</a></li>
+                            <li><a th:href="@{/admin/layout/user/userlist}">회원현황</a></li>
                             <li><a href="#">포인트관리</a></li>
                         </ol>
                     </li>
