전체 테스트1차 수정

--- a/src/main/resources/templates/my/info.html
+++ b/src/main/resources/templates/my/info.html
@@ -52,7 +52,7 @@
 	                                <option value="nate.com">nate.com</option>
 	                                <option value="outlook.com">outlook.com</option>
 	                            </select>
-	                            <button id="btnChangeEmail">수정하기</button>
+	                            <button type="button" id="btnChangeEmail">수정하기</button>
 	                        </td>
 	                    </tr>
 	                    <tr>
@@ -63,7 +63,7 @@
 	                                <input type="text" id="userHp2" readonly/>-
 	                                <input type="text" id="userHp3" readonly/>
 	                                
-	                                <button id="btnChangeHp">수정하기</button>
+	                                <button type="button" id="btnChangeHp">수정하기</button>
 	                            </p>
 	                        </td>
 	                    </tr>
@@ -71,7 +71,7 @@
 	                        <td>주소</td>
 	                        <td>
 	                            <input type="text" name="zip" th:value="${userDTO.zip}" readonly/>
-	                            <button id="btnFindZip" onclick="zipcode(event)">주소검색</button> <!-- event객체 추가하기 -->
+	                            <button type="button" id="btnFindZip" onclick="zipcode()">주소검색</button> <!-- button type="button"으로 하면 button 기본 기능인 폼 전송 막을 수 있음 -->
 	                            <p class="address">
 	                                <input type="text" name="addr1" th:value="${userDTO.addr1}" readonly/>
 	                                <input type="text" name="addr2" th:value="${userDTO.addr2}"/>
